# orm

./: README.md  pyproject.toml  requirements.txt
src/sb_orm/: __init__.py  adaptor.py  adaptor_factory.py  database_objects.py  mysql_adaptor.py  pgsql_adaptor.py  repository_base.py  sqlite_adaptor.py  table_base.py
tests/: basic_tests.py  test_repo.py  test_table.py
