[build-system]
requires = ["pip>=22.3.1",
            "setuptools>=66.0.0",
            "wheel>=0.38.4"]

build-backend = "setuptools.build_meta"

[project]
name = "sb_orm"
readme = "README.md"
version = "0.0.1"
authors = [
    { name = "Stephen Booth", email = "stephen.booth.za@gmail.com" },
]
description = "A orm implementation"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["sb_db_common>=0.0.1"]
